facilities and donate section added

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,8 @@
   --main-grey: #e2e2e2;
   --main-grey-lite: #f3f3f3;
   --main-p-grey: #545454;
+  --main-plain-grey: #808080;
+  --main-avl-grey: #474747;
 }
 
 * {
