--- a/src/styles/home.module.css
+++ b/src/styles/home.module.css
@@ -41,7 +41,7 @@
   width: 100%;
   object-fit: cover;
 }
-.req_donate_btn {
+/* .req_donate_btn {
   border: none;
   font-family: "Raleway", sans-serif !important;
   padding: 7px 20px;
@@ -50,7 +50,7 @@
   color: var(--main-white);
   margin-right: 15%;
   background-color: var(--main-red);
-}
+} */
 
 .bannerlinks_bg {
   display: flex;
@@ -76,9 +76,11 @@
 }
 .search_label {
   font-weight: bold;
+  font-size: 1.1rem;
 }
 .blood_bank_req_label {
   font-weight: 600;
+  font-size: 1.1rem;
 }
 .options_content {
   margin-right: 15%;
@@ -93,7 +95,7 @@
   font-family: "Raleway", sans-serif !important;
   padding: 7px 20px;
   font-weight: 600;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
   color: var(--main-white);
   margin-right: 15%;
   background-color: var(--main-red);
@@ -101,7 +103,7 @@
 .search_btn {
   border: none;
   /* padding: 0.2rem 0.4rem; */
-  padding: 6px;
+  padding: 8px;
 
   background-color: var(--main-grey);
   cursor: pointer;
@@ -111,7 +113,7 @@
   margin-right: 1rem;
   border: none;
   background-color: var(--main-grey);
-  padding: 4px;
+  padding: 6px;
   outline: none;
   cursor: pointer;
   font-weight: 600;
@@ -156,6 +158,10 @@
   flex-direction: column;
   justify-content: center;
 }
+.name_bloodtype_label {
+  margin-bottom: 10px;
+  font-size: 1.26rem;
+}
 .address_container {
   /* display: flex; */
   display: inline-flex;
@@ -165,7 +171,7 @@
 }
 .address_label {
   /* font-weight: 400; */
-  font-size: 0.75rem;
+  font-size: 0.9rem;
 }
 .blood_types {
   display: flex;
@@ -185,7 +191,7 @@
   flex: 0.6;
   /* padding-left: 5%; */
   display: inline-flex;
-  gap: 1rem;
+  /* gap: 0.1rem; */
   justify-content: center;
   align-items: center;
 }
@@ -207,7 +213,7 @@
   width: 100%;
   justify-content: space-between;
   background-color: var(--main-red);
-  padding: 2rem 6rem 2rem 6rem;
+  padding: 2rem 6rem 2rem 5rem;
   color: var(--main-white);
   letter-spacing: 1px;
 }
