--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -2,10 +2,9 @@
   padding: 2rem 6rem;
   display: flex;
   justify-content: space-between;
+  background-color: var(--main-secondary-white);
 }
 .logoImg {
-  /* margin: 0.5rem 5.5rem 0.5rem 1rem;
-   */
   height: 75px;
   width: 69px;
 }
