--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
   --main-p-grey: #545454;
   --main-plain-grey: #808080;
   --main-avl-grey: #474747;
+  --main-secondary-white: #f3f3f3;
   --main-xlight-grey: #6b6a6a;
 }
 
