--- a/src/styles/component.module.css
+++ b/src/styles/component.module.css
@@ -240,7 +240,8 @@
 .donate_blood_icon_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  /* align-items: center; */
   margin-right: 10rem;
 }
 .req_blood_label_content {
@@ -260,6 +261,7 @@
 .req_blood_icon {
   height: 16rem;
   width: 17rem;
+  margin-top: 3rem;
 }
 
 .requestForm {
@@ -307,6 +309,7 @@
   color: var(--main-white);
   background-color: var(--main-red);
   border-radius: 2px;
+  cursor: pointer;
 }
 /* end request blood section */
 /* donate section */
@@ -315,6 +318,11 @@
   margin-top: 2rem;
   height: 12rem;
   width: 20rem;
+}
+.donate_blood_icon1 {
+  margin-top: 2rem;
+  height: 14rem;
+  width: 15rem;
 }
 
 .donate_desc_label {
@@ -337,4 +345,14 @@
 .primary_label_color {
   color: var(--main-red);
 }
+
+.join_us_label {
+  font-size: 2rem;
+  /* display: block; */
+  padding-bottom: 0.5rem;
+  width: 55%;
+  margin-bottom: 2rem;
+  border-bottom: 2px solid var(--main-red);
+}
+
 /* end of  donate section */
