--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,7 @@
 html,
 body {
   font-family: "Lato", sans-serif;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 
 /* override table styling */
