--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -1,11 +1,12 @@
+.test {
+  position: relative;
+}
 .navBar {
   display: flex;
   flex-direction: row;
-  min-height: 10vh;
   margin-left: 5rem;
   justify-content: space-between;
   color: var(--main-white);
-  overflow-x: hidden;
 }
 .navSection {
   padding: 1rem 5rem;
@@ -17,6 +18,8 @@
   position: relative;
   z-index: 1;
   font-size: large;
+  min-height: 5rem;
+  /* position: relative; */
 }
 
 .navSection::after {
@@ -25,7 +28,7 @@
   background-color: var(--main-red);
   position: absolute;
   transform: skew(30deg);
-  width: 110%;
+  width: 130%;
   height: 100%;
   z-index: -1;
   top: 0;
@@ -46,11 +49,28 @@
   margin: 0 2rem;
   float: left;
   position: relative;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
   cursor: pointer;
   text-decoration: none;
 }
+
+/* .listItem:after {
+  content: "";
+  display: block;
+  height: 3px;
+  width: 0;
+  background: transparent;
+  transition: width 0.7s ease, background-color 0.5s ease;
+} */
+
+.nextLink {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  /* width: 100%; */
+}
+
 .loginbtndiv {
   display: flex;
   align-items: center;
@@ -65,4 +85,115 @@
 .icon {
   margin-right: 0.5rem;
   cursor: pointer;
+}
+.nav_icon {
+  display: none;
+}
+.nav_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  max-width: 1500px;
+}
+
+.nav_ul_active {
+  list-style: none;
+}
+.login_hamburger {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  gap: 20px;
+  align-items: center;
+}
+@media screen and (max-width: 1200px) {
+  .nav_ul {
+    display: none;
+  }
+  .nav_icon {
+    display: block;
+  }
+  .nav_ul_active {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    list-style: none;
+    width: 150vw;
+    height: 100vh;
+    top: 100%;
+    left: -70%;
+    background-color: var(--main-white);
+    color: #000;
+    z-index: 3;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+  .login_hamburger {
+    /* display: inline-flex;
+    flex-direction: row-reverse;
+    gap: 10px; */
+
+    position: absolute;
+    right: 50px;
+  }
+  /* .nav_ul {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-top: 1pxsolid #fff;
+    position: absolute;
+    top: 80px;
+    left: -110%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  .nav_ul_active {
+    background: #1f5156;
+    left: 0px;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+  .nextLink {
+    padding: 1.5rem;
+    width: 100%;
+    display: table;
+  }
+  .nav_icon {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(-100%, 60%);
+    font-size: 1.8rem;
+    cursor: pointer;
+    color: #ffdd40;
+  } */
+}
+
+@media screen and (max-width: 670px) {
+  .nav_ul_active {
+    left: -110%;
+  }
+  .navBar {
+    margin-left: 1rem;
+  }
+}
+@media screen and (max-width: 550px) {
+  .nav_ul_active {
+    left: -130%;
+  }
+  .login_hamburger {
+    /* display: inline-flex;
+    flex-direction: row-reverse;
+    gap: 10px; */
+
+    /* position: absolute; */
+    right: 20px;
+  }
 }
