--- a/src/styles/navBar.module.css
+++ b/src/styles/navBar.module.css
@@ -19,7 +19,6 @@
   z-index: 1;
   font-size: large;
   min-height: 5rem;
-  /* position: relative; */
 }
 
 .navSection::after {
@@ -36,33 +35,27 @@
   border-bottom-left-radius: 2px;
 }
 .logoImg {
-  margin: 0.5rem 5.5rem 0.5rem 1rem;
+  margin: 0.5rem 9rem 0.5rem 1rem;
   height: 9vh;
-  width: 10vh;
+  width: 9vh;
 }
 .nav_ul {
   list-style: none;
   display: flex;
   flex-direction: row;
 }
-.listItem {
+.listItem,
+.listItem1 {
   margin: 0 2rem;
   float: left;
   position: relative;
-  /* display: flex;
-  align-items: center; */
+
   cursor: pointer;
   text-decoration: none;
 }
-
-/* .listItem:after {
-  content: "";
-  display: block;
-  height: 3px;
-  width: 0;
-  background: transparent;
-  transition: width 0.7s ease, background-color 0.5s ease;
-} */
+.listItem1 {
+  display: none;
+}
 
 .nextLink {
   display: flex;
@@ -104,7 +97,6 @@
 .login_hamburger {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: space-between;
   gap: 20px;
   align-items: center;
 }
@@ -115,6 +107,9 @@
   .nav_icon {
     display: block;
   }
+  .loginbtndiv {
+    display: none;
+  }
   .nav_ul_active {
     display: flex;
     flex-direction: column;
@@ -124,6 +119,7 @@
     list-style: none;
     width: 150vw;
     height: 100vh;
+    padding-bottom: 5rem;
     top: 100%;
     left: -70%;
     background-color: var(--main-white);
@@ -132,48 +128,18 @@
     opacity: 1;
     transition: all 0.5s ease;
   }
-  .login_hamburger {
-    /* display: inline-flex;
-    flex-direction: row-reverse;
-    gap: 10px; */
 
-    position: absolute;
-    right: 50px;
-  }
-  /* .nav_ul {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    border-top: 1pxsolid #fff;
-    position: absolute;
-    top: 80px;
-    left: -110%;
-    opacity: 1;
-    transition: all 0.5s ease;
-  }
-
-  .nav_ul_active {
-    background: #1f5156;
-    left: 0px;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 1;
-  }
-  .nextLink {
-    padding: 1.5rem;
-    width: 100%;
-    display: table;
-  }
-  .nav_icon {
+  .listItem1 {
     display: block;
+  }
+
+  .login_hamburger {
     position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-    color: #ffdd40;
-  } */
+    right: 70px;
+  }
+  .logoImg {
+    margin-right: 5rem;
+  }
 }
 
 @media screen and (max-width: 670px) {
@@ -189,11 +155,6 @@
     left: -130%;
   }
   .login_hamburger {
-    /* display: inline-flex;
-    flex-direction: row-reverse;
-    gap: 10px; */
-
-    /* position: absolute; */
-    right: 20px;
+    right: 35px;
   }
 }
