--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -3,7 +3,6 @@
   align-items: center;
   padding: 5rem 8rem;
   justify-content: center;
-  /* width: 100%; */
   font-weight: bold;
 }
 .dirgahyu_icon_image {
@@ -18,7 +17,6 @@
 }
 .login_label {
   font-size: 2rem;
-  /* display: block; */
   padding-bottom: 0.5rem;
   width: 30%;
   margin-bottom: 3rem;
@@ -32,14 +30,11 @@
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
-  /* color: #fff; */
   margin-bottom: 30px;
   border: none;
-  /* border-bottom: 1px solid #fff; */
   outline: none;
   background: transparent;
   border-bottom: 2px solid rgb(206, 206, 206);
-  /* width: 1%; */
   font-weight: bold;
 }
 
@@ -97,4 +92,14 @@
   margin-right: 0.3rem;
   height: 1.5rem;
   width: 1.5rem;
+}
+
+@media screen and (max-width: 800px) {
+  .loginContainer {
+    flex-direction: column;
+    align-items: center;
+  }
+  .dirgahyu_icon_image {
+    display: none;
+  }
 }
